# guitar_tab

./: README.md  main.py  pyproject.toml  result.ly  score.midi
guitartab_transcriber/: __init__.py  tab_format.py  transcriber.py  types.py  youtube.py
