[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "guitartab-transcriber"
version = "0.1.0"
description = "Guitar tab transcription library from audio or YouTube"
authors = [
  { name = "Your Name" }
]
dependencies = [
  "basic-pitch",
  "librosa",
  "soundfile",
  "yt-dlp",
  "matplotlib",
]

[project.urls]
Homepage = "https://example.com"
